--- a/src/contact/contact.css
+++ b/src/contact/contact.css
@@ -28,6 +28,9 @@
     background: red;
     display: inline-block;
 }
+#contactbody .indent-level-0{
+    display: none;
+}
 #contactbody .top{
     height: 50px;
     background: #00284D;
