--- a/src/management/management.css
+++ b/src/management/management.css
@@ -45,6 +45,9 @@
 #managementbody .mangbtn{
     margin-top: 10px;
 }
+.ant-modal{
+    width:300px !important;
+}
 #managementbody .top{
     height: 50px;
     background: #00284D;
