--- a/src/addschool/addschool.css
+++ b/src/addschool/addschool.css
@@ -146,3 +146,23 @@
 .supermanager p{
     margin-bottom: 0;
 }
+#tip {
+    background-color: #ddf;
+    color: #333;
+    border: 1px solid silver;
+    box-shadow: 3px 4px 3px 0px silver;
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    border-radius: 5px;
+    overflow: hidden;
+    line-height: 20px;
+}
+#tip input[type="text"] {
+    height: 25px;
+    border: 0;
+    padding-left: 5px;
+    width: 280px;
+    border-radius: 3px;
+    outline: none;
+}
