--- a/src/login/login.css
+++ b/src/login/login.css
@@ -27,10 +27,10 @@
     font-weight: 700;
     font-style: normal;
     font-size: 40px;
-    color: rgba(0, 0, 0, 0.427450980392157);
+    color: #333;
     line-height: 60px;
     height: 60px;
-    margin-bottom: 20px;
+    margin-bottom: 50px;
     margin-top: 250px;
 }
 
