--- a/src/login/login.css
+++ b/src/login/login.css
@@ -8,7 +8,7 @@
     right: 0;
 }
 #loginmbody  .login-form {
-    max-width: 300px;
+    max-width: 380px;
     margin:0 auto
   }
 #loginmbody   .login-form-forgot {
@@ -26,14 +26,22 @@
     text-align: center;
     font-weight: 700;
     font-style: normal;
-    font-size: 40px;
+    font-size: 22px;
     color: #333;
-    line-height: 60px;
     height: 60px;
-    margin-bottom: 50px;
-    margin-top: 250px;
 }
-
+#loginmbody .footer{
+    text-align: center;
+    font-size: 15px;
+    width: 100%;
+    line-height: 30px;
+    margin-top: 200px;
+}
+#loginmbody .footimg{
+    margin-left: 10px;
+    margin-right: 10px;
+    width: 20px;
+}
 @media screen and (max-width: 600px) {
     #loginmbody .title{
         font-size: 30px;
